# cow

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/routes/: cows.py  measurements.py  reports.py  sensors.py
data/reports/: report_milk_20240601_20240630.csv  report_weights_20240630.csv
scripts/: test-coverage.sh  test.sh
tests/: conftest.py  test_cows.py  test_main.py  test_measurements.py  test_reports.py  test_sensors.py
utils/: clean_data.sh  explore_data.ipynb  explore_reports.ipynb  load_data.py  load_data_sync.py  read_sample_data.py
